--- a/base/templates/base/transaction_create.html
+++ b/base/templates/base/transaction_create.html
@@ -39,7 +39,7 @@
             <label class="text-[12px] font-bold" for="message">Message to receiver</label>
             {{form.message}}
         </div>
-        <div class="flex flex-row items-center gap-2">
+        <div id="scheduled-toggle-holder" class="flex flex-row items-center gap-2">
             <input class="w-3 h-3 rounded" type="checkbox" id="scheduled" >
             <label class="text-sm" for="scheduled">Scheduled transaction</label>
         </div>
