--- a/base/templates/base/profile_details.html
+++ b/base/templates/base/profile_details.html
@@ -40,10 +40,12 @@
             {{form.email.value}}
             {{form.email.as_hidden}}
         </div>
-        <div class="flex flex-col">
-            <label class="text-[12px] font-bold" for="{{ form.rank.id_for_label }}">Rank</label>
-            {{form.instance.get_rank_display}}
-        </div>
+        {% if not user.is_staff %}
+            <div class="flex flex-col">
+                <label class="text-[12px] font-bold" for="{{ form.rank.id_for_label }}">Rank</label>
+                {{form.instance.get_rank_display}}
+            </div>
+        {% endif %}
         <button type="submit" class="w-full bg-primary text-white py-2 rounded-lg shadow-md">Save</button>
     </form>
 {% endblock %}
