Update templates to show notification

--- a/templates/main.html
+++ b/templates/main.html
@@ -38,6 +38,7 @@
       </div>
     </div>
     {% if user.is_authenticated %}
+      {% include 'toast.html' %}
       {% if user.is_staff %}
         {% include 'bottombar.admin.html' %}
       {% else %}
