--- a/templates/bottombar.html
+++ b/templates/bottombar.html
@@ -1,4 +1,4 @@
-<nav class="flex flex-row w-screen fixed bottom-0 bg-white shadow-main lg:hidden py-4">
+<nav class="flex flex-row w-screen fixed bottom-0 bg-white shadow-main lg:hidden py-4 z-20">
     <ul id="menu-items" class="flex flex-row w-full justify-around">
       <li class="menu-item">
         <a href="/dashboard/"><i class="fa-solid fa-house text-2xl"></i></a>
