--- a/authsystem/templates/authsystem/sign_up.html
+++ b/authsystem/templates/authsystem/sign_up.html
@@ -8,9 +8,7 @@
             <form class="flex flex-col gap-2" method="POST">
                {% csrf_token %}
                <div class="flex flex-col gap-4">
-                  <div class="hidden">
-                     {{form.bank}}
-                  </div>
+                  {{form.bank.as_hidden}}
                   <div class="flex flex-col">
                      <label class="text-[12px] font-semibold" for="first_name">Firstname</label>
                      {{form.first_name}}
