--- a/templates/toast.html
+++ b/templates/toast.html
@@ -2,7 +2,7 @@
     <p class="text-white text-center" id="toast_msg"></p>
 </div>
 <script>
-    const protocol = window.location.protocol === 'https:' ? 'wss' : 'ws',
+    const protocol = window.location.protocol === 'https:' ? 'wss' : 'ws'
     const socket = new WebSocket(`${protocol}://${window.location.host}/{{user.id}}/`)
     socket.onmessage = function(e) {
         const data = JSON.parse(e.data);
