--- a/base/templates/base/loan_payment.html
+++ b/base/templates/base/loan_payment.html
@@ -19,15 +19,22 @@
             {% endfor %}
         </div>
         <div class="flex flex-col">
+            <label class="text-[12px] font-bold" for="debt">Total debt</label>
+            {{form.debt}}
+            {% for error in form.debt.errors  %}
+                <p class="text-red-500 text-[12px]">{{error}}</p>
+            {% endfor %}
+        </div>
+        <div class="flex flex-col">
             <label class="text-[12px] font-bold" for="amount">Amount</label>
             {{form.amount}}
             {% for error in form.amount.errors  %}
                 <p class="text-red-500 text-[12px]">{{error}}</p>
             {% endfor %}
+            {% if error  %}
+                <p class="text-red-500 text-[12px]">{{error}}</p>
+            {% endif %}
         </div>
-        {% if error  %}
-            <p class="text-red-500 text-[12px]">{{error}}</p>
-        {% endif %}
         <button type="submit" class="w-full bg-primary text-white py-2 rounded-lg">Transfer money</button>
     </form>
 {% endblock %}
